Update Eigen 3 include path

--- a/src/simulation/makefile
+++ b/src/simulation/makefile
@@ -2,7 +2,8 @@ COMMON=-O2 -I../../lib/mjpro140/include -L../../lib/mjpro140/bin -std=c++11 -lst
 
 CMA=-I/usr/local/Cellar/eigen/3.3.0/include/eigen3 -I/Users/Siebe/include/libcmaes -L/Users/Siebe/lib -L/usr/local/lib
 
-EIGEN=-I/usr/local/Cellar/eigen/3.3.0/include/eigen3
+# EIGEN=-I/usr/local/Cellar/eigen/3.3.0/include/eigen3
+EIGEN=-I../../include/eigen3
 
 BOOST_PYTHON=-I/usr/local/Cellar/boost-python/1.63.0/include -L/usr/local/Cellar/boost-python/1.63.0/lib -I/usr/local/Cellar/boost/1.63.0/include -L/usr/local/Cellar/boost/1.63.0/lib -I/Library/Frameworks/Python.framework/Versions/3.5/include/python3.5m
 DYNAMIC_LIB=-shared -undefined dynamic_lookup
